--- a/4-dars/index.html
+++ b/4-dars/index.html
@@ -5,8 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-    
+    <!-- CSS ni 3 xil usulda yozish mumkin
+     1.Inline
+    2. -->
+    <h1>Github va Netlifyda ishlash</h1>
+    <p></p>
 </body>
 </html>
