1-dars uy ishi hover active holatlar

--- a/8-dars/puma.html
+++ b/8-dars/puma.html
@@ -85,8 +85,8 @@
 
       <div class="section-feature-content-shoes">
         <div class="section-feature-content-shoes-chance">
-          <img class="img-chance" src="./image/Quality.svg" alt="img-chance">
-          <h3 class="section-feature-content-shoes-chance-title">Quality</h3>
+          <img class="img-chance" src="./image/Flexible.svg" alt="img-chance">
+          <h3 class="section-feature-content-shoes-chance-title">Flexible</h3>
           <p class="section-feature-content-shoes-chance-subtitle">Lorem ipsum dolor sit consectetur adipiscing elit. Viverra in ul</p>
           <div class="section-feature-content-shoes-learn-more-box">
             <p class="section-feature-content-shoes-learn-more-word">Read more</p>
@@ -97,8 +97,8 @@
 
       <div class="section-feature-content-shoes">
         <div class="section-feature-content-shoes-chance">
-          <img class="img-chance" src="./image/Quality.svg" alt="img-chance">
-          <h3 class="section-feature-content-shoes-chance-title">Quality</h3>
+          <img class="img-chance" src="./image/Long-Lasting.svg" alt="img-chance">
+          <h3 class="section-feature-content-shoes-chance-title">Long Lasting</h3>
           <p class="section-feature-content-shoes-chance-subtitle">Lorem ipsum dolor sit consectetur adipiscing elit. Viverra in ul</p>
           <div class="section-feature-content-shoes-learn-more-box">
             <p class="section-feature-content-shoes-learn-more-word">Read more</p>
@@ -199,8 +199,8 @@
 <!-- article start -->
   <article class="article">
     <div class="article-content">
-    <img class="article-puma-img" src="./image/puma-image.png" alt="puma-image">
     <div class="article-content-box">
+      <img class="article-puma-img" src="./image/puma-image.png" alt="puma-image">
       <h2 class="article-content-box-title">Sign up to our Newsletter</h2>
       <p class="article-content-box-title-subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Eu sagittis, Atiam lorem sed justo amet viverra in a.</p>
     </div>
